# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AdminController;
 use App\Http\Controllers\AuthController;
 use Illuminate\Support\Facades\Route;
 
@@ -10,4 +11,9 @@ Route::post('/login', [AuthController::class, 'login']);
 // Rotas autenticadas
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
+
+    // Administradores
+    Route::middleware('admin')->group(function () {
+        Route::apiResource('admins', AdminController::class);
+    });
 });
